@@ -1,3 +1,8 @@
+2007-05-11  Brady Anderson <banderso@novell.com> 
+
+	* Banter/Account.cs: fixed the presence problem.  no more creating new
+	  presence objects.
+
 2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* Banter/Person.cs: moved some comments
